# ai-proc-detector

./: .gitignore  Cargo.toml  Makefile
bpf/: aidt.bpf.c  aidt.bpf.h
docker/: Dockerfile.build
src/: bin_tc_test.rs  events.rs  main.rs  main2.rs  proc.rs
