[package]
name = "aidt"
version = "0.1.0"
edition = "2021"

[dependencies]
libbpf-rs = "0.24"
anyhow = "1.0"
ctrlc = "3.4"
clap = { version = "4.4", features = ["derive"] }
plain = "0.2"
libc = "0.2"
log = "0.4.29"
fern = "0.7.1"
chrono = "0.4.44"
bitflags = "2.6"
serde_json = "1.0"
regex = "1"
procfs = "0.18.0"
nix = "0.31.3"
